Refactor Views to align with ViewModel names. Update search bar functionality

--- a/Expense Tracker/Expense Tracker/Expense Tracker.csproj
+++ b/Expense Tracker/Expense Tracker/Expense Tracker.csproj
@@ -37,13 +37,25 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Compile Update="Views\ActivityLog.xaml.cs">
+      <DependentUpon>ActivityLog.xaml</DependentUpon>
+    </Compile>
+  </ItemGroup>
+
+  <ItemGroup>
     <EmbeddedResource Update="Views\ActivityLog.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
-    <EmbeddedResource Update="Views\FriendsExpense.xaml">
+    <EmbeddedResource Update="Views\AddFriendPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
-    <EmbeddedResource Update="Views\GroupsExpense.xaml">
+    <EmbeddedResource Update="Views\AddGroupPage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
+    <EmbeddedResource Update="Views\Friends.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
+    <EmbeddedResource Update="Views\Groups.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
     <EmbeddedResource Update="Views\NewExpensePage.xaml">
